# cloud-harvester

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: analyser-storage-changelist.md  classic-resources.md  powervs-resources.md  vmware-resources.md  vpc-resources.md
docs/plans/: 2026-03-01-cloud-harvester-design.md  2026-03-01-cloud-harvester-implementation.md
docs/superpowers/plans/: 2026-03-30-storage-discovery-gaps.md
docs/superpowers/specs/: 2026-03-30-storage-discovery-gaps-design.md
src/cloud_harvester/: auth.py  cache.py  cli.py  harvester.py  schema.py  xlsx_writer.py
src/cloud_harvester/collectors/: base.py  registry.py
src/cloud_harvester/collectors/classic/: __init__.py  bare_metal.py  billing.py  block_storage.py  dedicated_hosts.py  direct_links.py  dns.py  event_log.py  file_storage.py  firewalls.py  gateways.py  images.py  load_balancers.py  object_storage.py  placement_groups.py  relationships.py  reserved_capacity.py  security_groups.py  ssh_keys.py  ssl_certificates.py  subnets.py  transit_gateways.py  users.py  virtual_servers.py  vlans.py  vpn_tunnels.py
src/cloud_harvester/collectors/powervs/: __init__.py  client.py  cloud_connections.py  dhcp.py  events.py  host_groups.py  (+17 more)
src/cloud_harvester/utils/: formatting.py
tests/: test_auth.py  test_classic_collectors.py  test_cli.py  test_harvester.py  test_integration.py  test_powervs_collectors.py  test_registry.py  test_relationships.py  test_schema.py  test_vmware_collectors.py  test_vpc_collectors.py  test_xlsx_writer.py
(+36 files in other folders)
